@@ -17,13 +17,6 @@
 package http
 
 import (
-	. "github.com/mozilla-services/heka/pipeline"
-        . "github.com/mozilla-services/heka/plugins/tcp"
-	pipeline_ts "github.com/mozilla-services/heka/pipeline/testsupport"
-	"github.com/mozilla-services/heka/pipelinemock"
-	plugins_ts "github.com/mozilla-services/heka/plugins/testsupport"
-	"github.com/rafrombrc/gomock/gomock"
-	gs "github.com/rafrombrc/gospec/src/gospec"
 	"crypto/tls"
 	"io"
 	"net"
@@ -32,6 +25,14 @@ import (
 	"os"
 	"reflect"
 	"strings"
+
+	. "github.com/mozilla-services/heka/pipeline"
+	pipeline_ts "github.com/mozilla-services/heka/pipeline/testsupport"
+	"github.com/mozilla-services/heka/pipelinemock"
+	. "github.com/mozilla-services/heka/plugins/tcp"
+	plugins_ts "github.com/mozilla-services/heka/plugins/testsupport"
+	"github.com/rafrombrc/gomock/gomock"
+	gs "github.com/rafrombrc/gospec/src/gospec"
 )
 
 func HttpListenInputSpec(c gs.Context) {
@@ -70,7 +71,7 @@ func HttpListenInputSpec(c gs.Context) {
 			} else {
 				ts.Start()
 			}
-			
+
 			startedChan <- true
 			return nil
 		}
@@ -81,6 +82,7 @@ func HttpListenInputSpec(c gs.Context) {
 			ith.MockSplitterRunner)
 		ith.MockSplitterRunner.EXPECT().UseMsgBytes().Return(false)
 		ith.MockSplitterRunner.EXPECT().Splitter().Return(splitter)
+		ith.MockSplitterRunner.EXPECT().Done()
 
 		decChan := make(chan func(*PipelinePack), 1)
 		feedDecorator := func(decorator func(*PipelinePack)) {
@@ -245,75 +247,75 @@ func HttpListenInputSpec(c gs.Context) {
 		})
 
 		c.Specify("Test API Authentication", func() {
-		    config.AuthType = "API"
-		    config.Key = "123"
+			config.AuthType = "API"
+			config.Key = "123"
 
-		    err := httpListenInput.Init(config)
-		    c.Assume(err, gs.IsNil)
-		    ts.Config = httpListenInput.server
+			err := httpListenInput.Init(config)
+			c.Assume(err, gs.IsNil)
+			ts.Config = httpListenInput.server
 
-		    getRecCall.Return(0, make([]byte, 0), io.EOF)
-		    startInput()
-		    <-startedChan
+			getRecCall.Return(0, make([]byte, 0), io.EOF)
+			startInput()
+			<-startedChan
 
-		    client := &http.Client{}
-		    req, err := http.NewRequest("GET", ts.URL, nil)
-		    req.Header.Add("X-API-KEY", "123")
-		    resp, err := client.Do(req)
-		    c.Assume(err, gs.IsNil)
-		    resp.Body.Close()
-		    c.Expect(resp.StatusCode, gs.Equals, 200)
+			client := &http.Client{}
+			req, err := http.NewRequest("GET", ts.URL, nil)
+			req.Header.Add("X-API-KEY", "123")
+			resp, err := client.Do(req)
+			c.Assume(err, gs.IsNil)
+			resp.Body.Close()
+			c.Expect(resp.StatusCode, gs.Equals, 200)
 		})
 
 		c.Specify("Test Basic Auth", func() {
-		    config.AuthType = "Basic"
-		    config.Username = "foo"
-		    config.Password = "bar"
-		    
-		    err := httpListenInput.Init(config)
-		    c.Assume(err, gs.IsNil)
-		    ts.Config = httpListenInput.server
+			config.AuthType = "Basic"
+			config.Username = "foo"
+			config.Password = "bar"
 
-		    getRecCall.Return(0, make([]byte, 0), io.EOF)
-		    startInput()
-		    <-startedChan
+			err := httpListenInput.Init(config)
+			c.Assume(err, gs.IsNil)
+			ts.Config = httpListenInput.server
 
-		    client := &http.Client{}
-		    req, err := http.NewRequest("GET", ts.URL, nil)
-		    req.SetBasicAuth("foo", "bar")
-		    resp, err := client.Do(req)
-		    c.Assume(err, gs.IsNil)
-		    resp.Body.Close()
-		    c.Expect(resp.StatusCode, gs.Equals, 200)
+			getRecCall.Return(0, make([]byte, 0), io.EOF)
+			startInput()
+			<-startedChan
+
+			client := &http.Client{}
+			req, err := http.NewRequest("GET", ts.URL, nil)
+			req.SetBasicAuth("foo", "bar")
+			resp, err := client.Do(req)
+			c.Assume(err, gs.IsNil)
+			resp.Body.Close()
+			c.Expect(resp.StatusCode, gs.Equals, 200)
 		})
 
 		c.Specify("Test TLS", func() {
-                        config.UseTls = true
+			config.UseTls = true
 
-                        c.Specify("fails to init w/ missing key or cert file", func() {
-                                config.Tls = TlsConfig{}
+			c.Specify("fails to init w/ missing key or cert file", func() {
+				config.Tls = TlsConfig{}
 
-                                err := httpListenInput.setupTls(&config.Tls);
-                                c.Expect(err, gs.Not(gs.IsNil))
-                                c.Expect(err.Error(), gs.Equals,
-                                        "TLS config requires both cert_file and key_file value.")
-                        })
+				err := httpListenInput.setupTls(&config.Tls)
+				c.Expect(err, gs.Not(gs.IsNil))
+				c.Expect(err.Error(), gs.Equals,
+					"TLS config requires both cert_file and key_file value.")
+			})
 
-                        config.Tls = TlsConfig{
-                                CertFile: "./testsupport/cert.pem",
-                                KeyFile:  "./testsupport/key.pem",
-                        }
+			config.Tls = TlsConfig{
+				CertFile: "./testsupport/cert.pem",
+				KeyFile:  "./testsupport/key.pem",
+			}
 
-                        err := httpListenInput.Init(config)
-                        c.Assume(err, gs.IsNil)
-                        ts.Config = httpListenInput.server
+			err := httpListenInput.Init(config)
+			c.Assume(err, gs.IsNil)
+			ts.Config = httpListenInput.server
 
 			getRecCall.Return(0, make([]byte, 0), io.EOF)
 			startInput()
 			<-startedChan
 
 			tr := &http.Transport{
-     				TLSClientConfig: &tls.Config{InsecureSkipVerify: true},
+				TLSClientConfig: &tls.Config{InsecureSkipVerify: true},
 			}
 			client := &http.Client{Transport: tr}
 			req, err := http.NewRequest("GET", ts.URL, nil)
@@ -323,12 +325,12 @@ func HttpListenInputSpec(c gs.Context) {
 			c.Expect(resp.StatusCode, gs.Equals, 200)
 			resp.Body.Close()
 
-               })
+		})
 
-               ts.Close()
-               httpListenInput.Stop()
-               err := <-errChan
-               c.Expect(err, gs.IsNil)
+		ts.Close()
+		httpListenInput.Stop()
+		err := <-errChan
+		c.Expect(err, gs.IsNil)
 
 	})
 }
